samples/_failures_safe/1761251857_02b5f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb78cb36.c: In function ‘main’:
./samples/SAFE/__tmp_eb78cb36.c:185: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_eb78cb36.c:184:5: error: expected declaration or statement at end of input
  184 |     if
      |     ^~
